Fix vertical alignment of login link

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1079,8 +1079,6 @@ h1, h2, h3 {
 .client-login-link {
     color: var(--accent-color) !important;
     font-weight: 600;
-    margin-top: 1rem;
-    display: inline-block;
 }
 .client-login-link i {
     margin-right: 5px;
